v2.3:
------
*   Add 'filter' command to select and manipulate multiple entries at once
*   Help section now only initially displays item types, attributes and commands only
*   Help section is now in colour

v2.2:
------
*   Change random UIDs to order of display
*   Allow cancellation when prompted for input
*   Make todo file more readable putting classifications in columns
*   Remove redundant '# = for every version' classification in todo file
*   Sort items due on the same date by type, subject then description

v2.1:
------
*   Add priority feature that bolds entries with priority
*   Entries whose due date is tomorrow are no longer bold but not underlined

v2.0.5:
--------
*   Fix bug that incorrectly sorted entries in different months
*   Fix bug that rendered the edit function useless

v2.0.4:
--------
*   Fix bug that caused a crash when not entering an int in the extend function

v2.0.3:
--------
*   Change underlining of entries with 1 day left to making them bold
*   Fix bug that caused a crash

v2.0.2:
--------
*   Add changelog.txt and todo.txt
*   Fix bugs relating to data input
*   Add docstrings and comments throughout code
*   Windows machines now print coloured text instead of gibberish

v2.0.1:
--------
*   Includes more descriptive help messages
*   Minor bug fixes

v2.0:
------
*   Complete rebuild of CMDiary with greater efficiency, ease of use and maintainable code
*   No feature changes but changed internal mechanisms of the diary

v1.0.1:
--------
*   Minor bug fixes

v1.0:
------
*   Initial release