@@ -14,55 +14,96 @@ FILTER_ATTRIBUTES = {
 
 
 class FilterException(Exception):
+    """
+    An exception class which indicates an exception originating from a Filter object.
+    Is only defined for the custom name.
+    """
     pass
 
 
 def filter_function(function):
+    """
+    A decorator which filters through the entries according to a condition provided by the decorated function.
+    The decorated function should have the signature decorated_function(self, obj_value, filter_value) to specify
+    the condition between the value given and that of the object but will end up with the signature
+    decorated_function(attr, value) to determine the attribute and value to compare.
+
+    :param function:        The function to be decorated.
+    :return:                A decorated function.
+    """
     def wrapper(self, attr, value):
         matched = []
         for obj in self.objects:
             try:
                 obj_value = getattr(obj, attr)
-            except AttributeError:
+            except AttributeError:  # If invalid attribute is specified
                 return ATTR_MSG
-            if obj_value is None:
+            if obj_value is None:  # Skip over blank values
                 continue
             try:
                 if function(self, obj_value, value):
                     matched.append(obj)
-            except ValueError:
+            except ValueError:  # If type conversion fails
                 return VALUE_MSG
-            except TypeError:
+            except TypeError:  # If a date is converted to int
                 return 'Due date cannot be used with the < or > operator. Use \'days\' instead.'
         return matched
     return wrapper
 
 
 class Filter:
+    """
+    A class which can filter through a list of objects by comparing the value of an attribute to a given value.
+    The condition format to use is [attribute][operator][value].
+
+    :param objects:         A list of objects to be filtered.
+    :param initial:         An initial filter condition string.
+    """
     condition_format = re.compile('(.*?)([=<>:])(.*)')
 
     def __init__(self, objects, initial=None):
-        self.original = objects
+        """Initialise instance variables."""
+        self.original = objects  # Allows resetting of conditions
         self.objects = objects
         self.filters = []
         if initial is not None:
             self.refine(initial)
 
     def refine(self, condition):
+        """
+        Add a condition to refine the list of filtered objects.
+
+        :param condition:   A condition string.
+        :return:            None.
+        """
         if self.is_valid_condition(condition):
-            attr, operator, value = re.match(self.condition_format, condition).groups()
-            attr = FILTER_ATTRIBUTES.get(attr, 'error')
-            matched_objects = self.select(attr, operator, value)
-            if type(matched_objects) is list:
+            attr, operator, value = re.match(self.condition_format, condition).groups()  # Regex splits up raw string
+            attr = FILTER_ATTRIBUTES.get(attr, 'error')  # Attribute could be given in abbreviated form or not exist
+            matched_objects = self.select(attr, operator, value)  # Could be a list of filtered objects or error string
+            if type(matched_objects) is list:  # No error occurred
                 self.objects = matched_objects
                 self.filters.append('{} {} {}'.format(attr, operator, value))
-            else:
+            else:  # Error occurred
                 raise FilterException(matched_objects)
 
     def is_valid_condition(self, condition):
+        """
+        Checks raw condition string to check whether it is in the valid pattern.
+
+        :param condition:   The raw condition string.
+        :return:            A bool specifying whether the condition is valid.
+        """
         return bool(re.match(self.condition_format, condition))
 
     def select(self, attr, operator, value):
+        """
+        Maps operators to filter functions and selects all objects which match the condition.
+
+        :param attr:        The name of the attribute of the object to compare.
+        :param operator:    The operation to perform (either =, <, >, :).
+        :param value:       The value to compare to.
+        :return:            A list of matched objects or an error string.
+        """
         if operator == '=':
             return self.equal_to(attr, value)
         if operator == '>':
@@ -73,8 +114,29 @@ class Filter:
             return self.contains(attr, value)
 
     def reset(self):
+        """
+        Resets the filter and clears all conditions.
+
+        :return:            None.
+        """
         self.objects = self.original
         self.filters = []
+
+    @property
+    def filter_string(self):
+        """
+        Formats all active conditions into a string.
+
+        :return:            String of active conditions.
+        """
+        return '\n'.join(self.filters)
+
+    # The following functions define conditions for the operators however are decorated to actually
+    # filter the list of objects
+    # Signature after decoration is function(self, attr, value).
+    # :param attr:          The name of the attribute to compare.
+    # :param value:         The given value to compare
+    # :return:
 
     @filter_function
     def equal_to(self, obj_val, filter_val):
@@ -91,17 +153,3 @@ class Filter:
     @filter_function
     def contains(self, obj_val, filter_val):
         return str(filter_val).lower() in str(obj_val).lower()
-
-    @property
-    def filter_string(self):
-        return '\n'.join(self.filters)
-
-
-# Format    [attr][operator][value]
-
-# Operators:
-# -----------
-# =     Equal to
-# >     Greater than
-# <     Less than
-# :     Includes
