@@ -10,14 +10,14 @@ TODO FILE
 Every Version:
 ---------------
    *    Update version number                                                   [C]
-   *    Update changelog.txt                                                    [P]
+   *    Update changelog.txt                                                    [C]
 
 Current Update:
 v2.3:
 ------
  F      Add filter function to select multiple entries at once                  [C]
  FU     Update help section to contain filter info                              [C]
-   *    Update docstrings and comments                                          [ ]
+   *    Update docstrings and comments                                          [C]
 
 Future Updates:
 
